--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.myapp.pch1hc2"
+        applicationId "com.myapp.azure2"
         minSdk 22
         targetSdk 32
-        versionCode 211
-        versionName "211.0"
+        versionCode 212
+        versionName "212.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
